--- a/phoneNum.html
+++ b/phoneNum.html
@@ -73,7 +73,7 @@
         document.getElementById('result').innerHTML = `
           <h3>Validation Results</h3>
           <p><strong>Valid:</strong> Yes</p>
-          <p><strong>Number:</strong> ${data.number}</p>
+          <p><strong>Number:</strong> ${data.local_format}</p>
           <p><strong>Country:</strong> ${data.country_name} (${data.country_code})</p>
           <p><strong>Carrier:</strong> ${data.carrier}</p>
           <p><strong>Line Type:</strong> ${data.line_type}</p>
